# firnas

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
arabic_utils/: Cargo.toml
arabic_utils/src/: arabic_char.rs  arabic_consts.rs  arabic_number.rs  arabic_str.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: a.fns  صنف.ف  فيبوناتشي.ف
firnas_bytecode/: Cargo.toml
firnas_bytecode/src/: bytecode.rs  lib.rs
firnas_cli/: Cargo.toml
firnas_cli/src/: firnas.rs  main.rs
firnas_compiler/: Cargo.toml
firnas_compiler/src/: compiler.rs
firnas_compiler/tests/: ar_integration.rs  integration.rs
firnas_core/: Cargo.toml
firnas_core/src/: chunk.rs  lib.rs  macros.rs  main.rs  op_code.rs  value.rs  vm.rs
firnas_ext/: Cargo.toml
firnas_interpreter/: Cargo.toml
firnas_interpreter/src/: interpreter.rs  lib.rs  parser.rs
firnas_interpreter/tests/: integration.rs
firnas_runtime/: Cargo.toml
firnas_runtime/src/: value.rs  virtual_machine.rs
firnas_std/: Cargo.toml
firnas_std/src/: io.rs
firnas_tokenizer/: Cargo.toml
firnas_tokenizer/src/: ar_scanner.rs  error.rs  lib.rs  scanner.rs  token.rs
firnas_tokenizer/tests/: ar_integration.rs  en_integration.rs  integration.rs
firnas_vm/: Cargo.toml
firnas_vm/src/: builtins.rs  gc.rs  lib.rs  virtual_machine.rs
firnas_vm/src/stdlib/: collection.rs  debug.rs  io.rs  math.rs  mod.rs  time.rs
firnas_vm/tests/: ar_integration.rs  common.rs  integration.rs
firnas_vm/tests/ar/: class_tests.rs  control_flow_tests.rs  function_tests.rs  mod.rs  simple_tests.rs
firnas_vm/tests/en/: class_tests.rs  control_flow_tests.rs  function_tests.rs  list_tests.rs  mod.rs  simple_tests.rs
wasm_bindings/: Cargo.toml  index.html
wasm_bindings/src/: lib.rs
