[package]
name = "firnas_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firnas_tokenizer = { version = "*", path = "../firnas_tokenizer" }
firnas_bytecode = { version = "*", path = "../firnas_bytecode" }
firnas_ext = { version = "*", path = "../firnas_ext" }
