[package]
name = "wasm_bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
firnas_ext = { version = "*", path = "../firnas_ext" }
firnas_compiler = { version = "*", path = "../firnas_compiler" }
firnas_vm = { version = "*", path = "../firnas_vm" }
